# nmdc-lakehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: alldocs_ingestion.md  architecture.md  biosample_to_annotation_run.md  biosample_to_gene_table.md  biosample_to_workflow_run.md  for_berdl_claude.md  graph_traversal_sql.md  mongodb-connection.md  mongodb-setup.md  nmdc_metadata_tables.md  pfam_annotation_gff.md  pfam_terms.md  trino_recursive_graph_traversal.md
docs/decisions/: alldocs-not-ingested.md
local/: .env.example
notebooks/: FETCH_TAXONOMY_NOTES.md  LOAD_TAXONOMY_NOTES.md  build_biosample_to_annotation_run.ipynb  build_biosample_to_gene.ipynb  build_biosample_to_workflow_run.ipynb  fetch_ko_ec_annotations.ipynb  fetch_pfam_gff.ipynb  fetch_taxonomy_summaries.ipynb  ingest_ko_ec_annotations.ipynb  ingest_pfam_gff.ipynb  ingest_taxonomy_summaries.ipynb  load_pfam_terms.ipynb  load_taxonomy_summaries.ipynb  parse_ko_ec_cache.ipynb  parse_pfam_gff.ipynb  peek_ec_silver.ipynb  peek_ko_ec_links.ipynb  peek_mag_taxonomy_links.ipynb  peek_pfam_gff.ipynb  peek_read_taxonomy_links.ipynb
schema/: nmdc_runtime_collections.yaml
scripts/: README.md  audit_database_metadata.py  backfill_nmdc_ref_data_comments.py  download_to_cache.py  nmdc_metadata_audit_baseline.json
scripts/python/: audit_database_metadata.py  backfill_nmdc_ref_data_comments.py  drop_empty_parquet.py  export_duckdb_to_parquet.py  export_flattened_gold_to_csv.py  fetch_manifest.py  flatten_nmdc_collections.py  flatten_preview.py  generate_flattened_schema.py  mongodb_connection.py  schema_collections.py
src/nmdc_lakehouse/: __init__.py  cli.py  config.py  file_types.py
src/nmdc_lakehouse/io/: __init__.py  bigdata.py
src/nmdc_lakehouse/jobs/: __init__.py  alldocs_to_parquet.py  base.py  biosample_to_parquet.py  collection_to_parquet.py  direct_mongo_to_parquet.py  registry.py
src/nmdc_lakehouse/sinks/: __init__.py  base.py  iceberg_sink.py  parquet_sink.py
src/nmdc_lakehouse/sources/: __init__.py  base.py  mongo_source.py  postgres_source.py
src/nmdc_lakehouse/transforms/: __init__.py  base.py  flatteners.py  schema_generator.py
tests/: conftest.py  test_biosample_to_parquet.py  test_cli.py  test_collection_to_parquet.py  test_direct_mongo_to_parquet.py  test_file_types.py  test_flatteners.py  test_import.py  test_jobs_registry.py  test_mongo_source.py  test_parquet_sink.py  test_schema_generator.py
