[project]
name = "nmdc-lakehouse"
version = "0.0.0"
description = "ETL pipeline that extracts NMDC data via linkml-store (MongoDB / PostgreSQL), flattens the object model, and writes lakehouse-ready formats (Parquet / Iceberg)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sierra Moxon", email = "smoxon@lbl.gov" },
]
keywords = ["nmdc", "linkml", "linkml-store", "etl", "lakehouse", "parquet", "iceberg", "mongodb", "postgres"]

dependencies = [
    # Core LinkML data access
    # [all] brings in linkml>=1.8.0 as a transitive dep; the explicit
    # linkml>=1.10.0 floor ensures we don't regress below the version that
    # fixed the linkml-runtime 1.10 Format enum changes.
    # linkml-runtime is pinned explicitly because linkml 1.10.0's own floor
    # (>=1.9.5) is too loose — 1.9.x versions have version-skew breakage
    # (see linkml/linkml#3241, linkml/linkml PR#3183).
    "linkml-store[all]>=0.3.1",
    "linkml>=1.10.0",
    "linkml-runtime>=1.10.0",
    "nmdc-schema",
    # Database drivers (linkml-store routes through these)
    "pymongo>=4.9",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    # Lakehouse output formats
    "pyarrow>=16.0",
    "pyiceberg>=0.7",
    "duckdb>=1.0",
    "pandas>=2.2",
    # Job / CLI scaffolding
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    # Used by scripts/python/ (copied from external-metadata-awareness)
    "oaklib>=0.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mongomock>=4.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0.12.20260408",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
# Primary entry point. May be replaced by a richer job runner later.
nmdc-lakehouse = "nmdc_lakehouse.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmdc_lakehouse"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]

[tool.uv.sources]
linkml-store = { git = "https://github.com/linkml/linkml-store.git", rev = "f3006e2" }
# Dev dependencies managed via the `dev` extra above so `uv sync --extra dev`
# is sufficient. Keep this block for future uv-specific settings.

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "W",  # Warning
]
extend-ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires a live MongoDB or PostgreSQL instance (set ENABLE_DB_TESTS=true)",
    "slow: long running tests",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
